(fix) Fix wrong heights in some browsers.

--- a/src/client/res/resizer.css
+++ b/src/client/res/resizer.css
@@ -2,7 +2,7 @@
     height: calc(100% - 64px) !important;
 }
 
-Pane.vertical {
+.Pane.vertical {
     height: 100%;
 }
 
